--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         title: "Futuristic City",
         prompt: "Retro vintage grainy but bright image of reference picture (20s) standing on a sleek, high-rise rooftop at night, overlooking a sprawling city skyline. He's wearing a tailored dark coat over a black turtleneck, with a subtle smirk and hands in pockets. The neon glow of distant buildings and soft, ambient architectural lighting create sophisticated highlights and deep shadows. The mood is enigmatic and powerful, evoking urban luxury and solitude. Prominent film grain, 4:5 aspect ratio.",
         tags: ["sci-fi", "city"],
-        imageUrl: "file:///C:/Users/jaspe/Downloads/Gemini_Generated_Image_wxtno3wxtno3wxtn.png" // 👈 leave empty if no image
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p1%20(2).png?raw=true" // 👈 leave empty if no image
       },
       {
         id: 2,
@@ -230,3 +230,4 @@
 
 </body>
 </html>
+
