--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Prompt Gallery</title>
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CDPG2RXQPF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CDPG2RXQPF');
+</script>
+
+  
 </head>
 <body class="bg-gray-100 font-sans">
 
@@ -230,5 +242,6 @@
 
 </body>
 </html>
+
 
 
