--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
         id: 1,
         category: "sci-fi",
         title: "Futuristic City",
+        prompt: "A young man sitting in a modern grey armchair, with a light grey background. His face and hairstyle are like the reference image, wavy black hair with subtle highlights, trimmed beard, calm and thoughtful expression. Wearing a beige ribbed sweater, black pants slightly ripped at the knees, and beige sneakers. One hand lightly touching his forehead/chin, the other hand resting casually. Neutral tones, soft lighting, clean, minimal, modern look.",
+        tags: ["sci-fi", "city"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p1%20(2).png?raw=true" // 👈 leave empty if no image
+      },
+      {
+        id: 1,
+        category: "sci-fi",
+        title: "Futuristic City",
         prompt: "Retro vintage grainy but bright image of reference picture (20s) standing on a sleek, high-rise rooftop at night, overlooking a sprawling city skyline. He's wearing a tailored dark coat over a black turtleneck, with a subtle smirk and hands in pockets. The neon glow of distant buildings and soft, ambient architectural lighting create sophisticated highlights and deep shadows. The mood is enigmatic and powerful, evoking urban luxury and solitude. Prominent film grain, 4:5 aspect ratio.",
         tags: ["sci-fi", "city"],
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p1%20(2).png?raw=true" // 👈 leave empty if no image
@@ -242,6 +250,7 @@
 
 </body>
 </html>
+
 
 
 
