--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
         title: "Futuristic City",
         prompt: "A young man sitting in a modern grey armchair, with a light grey background. His face and hairstyle are like the reference image, wavy black hair with subtle highlights, trimmed beard, calm and thoughtful expression. Wearing a beige ribbed sweater, black pants slightly ripped at the knees, and beige sneakers. One hand lightly touching his forehead/chin, the other hand resting casually. Neutral tones, soft lighting, clean, minimal, modern look.",
         tags: ["sci-fi", "city"],
-        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p1%20(2).png?raw=true" // 👈 leave empty if no image
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p22.jpg?raw=true" // 👈 leave empty if no image
+      },
+       {
+        id: 1,
+        category: "sci-fi",
+        title: "Futuristic City",
+        prompt: "Cinematic, hyper-realistic full body shot: me (use my face with accurate 100%) on a vintage park bench under warm streetlight at golden hour, focused on smartphone. Light purple oversized shirt, beige trousers, sneakers, tousled hair, glasses, leather watch; flower bouquet beside. Lush blooms, cherry tree, dramatic golden clouds, creamy bokeh foreground, cable overhead. 8K, RAW, shallow depth, warm highlights/teal shadows, vivid textures",
+        tags: ["sci-fi", "city"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p23.jpg?raw=true" // 👈 leave empty if no image
       },
       {
         id: 1,
@@ -250,6 +258,7 @@
 
 </body>
 </html>
+
 
 
 
