--- a/index.html
+++ b/index.html
@@ -40,6 +40,30 @@
         id: 1,
         category: "sci-fi",
         title: "Futuristic City",
+        prompt: "Create this image in a portrait of a young woman standing among pink roses, cinematic atmosphere, pink-white tones, soft natural light, her long curly black hair blowing in the wind partially, wearing elegant light bink silk saree with a subtle sheen., detailed textures, ethereal mood, high-fashion magazine style photography, ultra realistic, 85mm lens, depth of field, 8k.Use the uploaded image for the girl's face -no face distortion, no loss of identity, no face morphing.",
+        tags: ["sci-fi", "city"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p25.jpg?raw=true" // 👈 leave empty if no image
+      },
+      {
+        id: 1,
+        category: "sci-fi",
+        title: "Futuristic City",
+        prompt: "Ultra realistic photo of the attached image seated at a rustic indoor café table, with warm Edison lights and brick walls in the background.She has long hair tied up in a loose bun, wearing round spectacles and a cream-colored oversized sweater tucked into high-waisted jeans.A latte cup rests on the wooden table beside an open notebook.Her posture is relaxed, slightly leaning forward, smiling softly while looking out the window. The background shows blurred people in the café, hanging plants, and warm golden lighting for a cozy, intimate feel.Her height is 5 feet 4 inches. Keep all facial details authentic for a raw candid vibe.",
+        tags: ["sci-fi", "city"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p24.jpg?raw=true" // 👈 leave empty if no image
+      },
+      {
+        id: 1,
+        category: "sci-fi",
+        title: "Futuristic City",
+        prompt: "Produce a clean, realistic edit of the man (exact same face and hairstyle from the uploaded photo). He is casually seated on the hood of a black Toyota Fortuner with the plate "Yasin-Ai." His outfit is a simple oversized black-and-white baggy shirt paired with black-and-white sneakers. His left hand rests in his pocket, while his right hand rests lightly on his knee. Behind him, mountains are partially hidden under a veil of thick fog.",
+        tags: ["sci-fi", "city"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p26.jpg?raw=true" // 👈 leave empty if no image
+      },
+      {
+        id: 1,
+        category: "sci-fi",
+        title: "Futuristic City",
         prompt: "A young man sitting in a modern grey armchair, with a light grey background. His face and hairstyle are like the reference image, wavy black hair with subtle highlights, trimmed beard, calm and thoughtful expression. Wearing a beige ribbed sweater, black pants slightly ripped at the knees, and beige sneakers. One hand lightly touching his forehead/chin, the other hand resting casually. Neutral tones, soft lighting, clean, minimal, modern look.",
         tags: ["sci-fi", "city"],
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p22.jpg?raw=true" // 👈 leave empty if no image
@@ -258,6 +282,7 @@
 
 </body>
 </html>
+
 
 
 
