--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p25.jpg?raw=true" // 👈 leave empty if no image
       },
       {
-        id: 1,
+        id: 22,
         category: "sci-fi",
         title: "Futuristic City",
-        prompt: "Ultra realistic photo of the attached image seated at a rustic indoor café table, with warm Edison lights and brick walls in the background.She has long hair tied up in a loose bun, wearing round spectacles and a cream-colored oversized sweater tucked into high-waisted jeans.A latte cup rests on the wooden table beside an open notebook.Her posture is relaxed, slightly leaning forward, smiling softly while looking out the window. The background shows blurred people in the café, hanging plants, and warm golden lighting for a cozy, intimate feel.Her height is 5 feet 4 inches. Keep all facial details authentic for a raw candid vibe.",
+        prompt: "Ultra realistic photo of the attached image seated at a rustic indoor café table, with warm Edison lights and brick walls in the background.She has long hair tied up in a loose bun, wearing round spectacles and a cream-colored oversized sweater tucked into high-waisted jeans.A latte cup rests on the wooden table beside an open notebook.Her posture is relaxed, slightly leaning forward, smiling softly while looking out the window.The background shows blurred people in the café,hanging plants,and warm golden lighting for a cozy,intimate feel.Her height is 5 feet 4 inches Keep all facial details authentic for a raw candid vibe.",
         tags: ["sci-fi", "city"],
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p24.jpg?raw=true" // 👈 leave empty if no image
       },
       {
-        id: 1,
+        id: 23,
         category: "sci-fi",
         title: "Futuristic City",
         prompt: "Produce a clean, realistic edit of the man (exact same face and hairstyle from the uploaded photo). He is casually seated on the hood of a black Toyota Fortuner with the plate "Yasin-Ai." His outfit is a simple oversized black-and-white baggy shirt paired with black-and-white sneakers. His left hand rests in his pocket, while his right hand rests lightly on his knee. Behind him, mountains are partially hidden under a veil of thick fog.",
@@ -61,7 +61,7 @@
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p26.jpg?raw=true" // 👈 leave empty if no image
       },
       {
-        id: 1,
+        id: 24,
         category: "sci-fi",
         title: "Futuristic City",
         prompt: "A young man sitting in a modern grey armchair, with a light grey background. His face and hairstyle are like the reference image, wavy black hair with subtle highlights, trimmed beard, calm and thoughtful expression. Wearing a beige ribbed sweater, black pants slightly ripped at the knees, and beige sneakers. One hand lightly touching his forehead/chin, the other hand resting casually. Neutral tones, soft lighting, clean, minimal, modern look.",
@@ -69,7 +69,7 @@
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p22.jpg?raw=true" // 👈 leave empty if no image
       },
        {
-        id: 1,
+        id: 25,
         category: "sci-fi",
         title: "Futuristic City",
         prompt: "Cinematic, hyper-realistic full body shot: me (use my face with accurate 100%) on a vintage park bench under warm streetlight at golden hour, focused on smartphone. Light purple oversized shirt, beige trousers, sneakers, tousled hair, glasses, leather watch; flower bouquet beside. Lush blooms, cherry tree, dramatic golden clouds, creamy bokeh foreground, cable overhead. 8K, RAW, shallow depth, warm highlights/teal shadows, vivid textures",
@@ -77,7 +77,7 @@
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p23.jpg?raw=true" // 👈 leave empty if no image
       },
       {
-        id: 1,
+        id: 26,
         category: "sci-fi",
         title: "Futuristic City",
         prompt: "Retro vintage grainy but bright image of reference picture (20s) standing on a sleek, high-rise rooftop at night, overlooking a sprawling city skyline. He's wearing a tailored dark coat over a black turtleneck, with a subtle smirk and hands in pockets. The neon glow of distant buildings and soft, ambient architectural lighting create sophisticated highlights and deep shadows. The mood is enigmatic and powerful, evoking urban luxury and solitude. Prominent film grain, 4:5 aspect ratio.",
@@ -282,6 +282,7 @@
 
 </body>
 </html>
+
 
 
 
