--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p1%20(2).png?raw=true" // 👈 leave empty if no image
       },
       {
+        id: 27,
+        category: "sci-fi",
+        title: "Futuristic City",
+        prompt: "Produce a clean, realistic edit of the man (exact same face and hairstyle from the uploaded photo). He is casually seated on the hood of a black Toyota Fortuner with the plate "Yasin-Ai." His outfit is a simple oversized black-and-white baggy shirt paired with black-and-white sneakers. His left hand rests in his pocket, while his right hand rests lightly on his knee. Behind him, mountains are partially hidden under a veil of thick fog.",
+        tags: ["sci-fi", "city"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p26.jpg?raw=true" // 👈 leave empty if no image
+      },
+      {
         id: 2,
         category: "portrait",
         title: "Cinematic Portrait",
@@ -242,6 +250,7 @@
 
 </body>
 </html>
+
 
 
 
