--- a/index.html
+++ b/index.html
@@ -45,14 +45,6 @@
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p1%20(2).png?raw=true" // 👈 leave empty if no image
       },
       {
-        id: 27,
-        category: "sci-fi",
-        title: "Futuristic City",
-        prompt: "Produce a clean, realistic edit of the man (exact same face and hairstyle from the uploaded photo). He is casually seated on the hood of a black Toyota Fortuner with the plate "Yasin-Ai." His outfit is a simple oversized black-and-white baggy shirt paired with black-and-white sneakers. His left hand rests in his pocket, while his right hand rests lightly on his knee. Behind him, mountains are partially hidden under a veil of thick fog.",
-        tags: ["sci-fi", "city"],
-        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p26.jpg?raw=true" // 👈 leave empty if no image
-      },
-      {
         id: 2,
         category: "portrait",
         title: "Cinematic Portrait",
@@ -211,6 +203,14 @@
         prompt: "Retro vintage grainy but bright image of reference picture (20s) with a strong, determined gaze, covered in honest sweat and wearing sturdy work overalls. He's on a construction site, silhouetted against a setting sun, taking a moment to survey his work. Tools are scattered around him, and the framework of a building rises in the background. The lighting is warm and dusty, with a dramatic glow from the low sun. The mood is resilient and proud, celebrating hard work and craftsmanship. Prominent film grain, 4:5 aspect ratio.",
         tags: ["sci-fi", "city"],
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p21.png?raw=true" // 👈 leave empty if no image
+      },
+      {
+        id: 27,
+        category: "sci-fi",
+        title: "Futuristic City",
+        prompt: "Produce a clean, realistic edit of the man exact same face and hairstyle from the uploaded photo.He is casually seated on the hood of a black Toyota Fortuner with the plate "Yasin-Ai." His outfit is a simple oversized black-and-white baggy shirt paired with black-and-white sneakers. His left hand rests in his pocket, while his right hand rests lightly on his knee. Behind him, mountains are partially hidden under a veil of thick fog.",
+        tags: ["sci-fi", "city"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p26.jpg?raw=true" // 👈 leave empty if no image
       }
     ];
 
@@ -250,6 +250,7 @@
 
 </body>
 </html>
+
 
 
 
