--- a/index.html
+++ b/index.html
@@ -180,14 +180,6 @@
         tags: ["cinematic", "portrait"],
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p18.png?raw=true"  // 👈 Replace with your uploaded image link
       },
-       {
-        id: 19,
-        category: "fantasy",
-        title: "Dragon Castle",
-        prompt: "Retro vintage grainy but bright image of reference pricture (20s) with a weathered face and kind eyes, wearing a simple flannel shirt and work pants. He's standing alone in a vast, golden field during late autumn, gazing out towards the horizon. A lone, gnarled tree is in the distance. The lighting is warm with a golden hour glow, casting long, dramatic shadows. The mood is serene and introspective, evoking a sense of enduring peace and connection to nature. Prominent film grain, 4:5 aspect ratio.",
-        tags: ["dragon", "castle", "fantasy"],
-        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p19.png?raw=true"
-      },
       {
         id: 20,
         category: "landscape",
@@ -208,7 +200,7 @@
         id: 27,
         category: "sci-fi",
         title: "Futuristic City",
-        prompt: "Produce a clean, realistic edit of the man exact same face and hairstyle from the uploaded photo.He is casually seated on the hood of a black Toyota Fortuner with the plate "Yasin-Ai." His outfit is a simple oversized black-and-white baggy shirt paired with black-and-white sneakers. His left hand rests in his pocket, while his right hand rests lightly on his knee. Behind him, mountains are partially hidden under a veil of thick fog.",
+        prompt: "Produce a clean, realistic edit of the man exact same face and hairstyle from the uploaded photo.He is casually seated on the hood of a black Toyota Fortuner with the plate Yasin-Ai.His outfit is a simple oversized black-and-white baggy shirt paired with black-and-white sneakers. His left hand rests in his pocket while his right hand rests lightly on his knee. Behind him, mountains are partially hidden under a veil of thick fog.",
         tags: ["sci-fi", "city"],
         imageUrl: "https://github.com/promptsking/promptsking/blob/main/p26.jpg?raw=true" // 👈 leave empty if no image
       }
@@ -250,6 +242,7 @@
 
 </body>
 </html>
+
 
 
 
