--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
     // ✅ You add prompts + uploaded image URLs here
     const prompts = [
       {
+        id: 31,
+        category: "sci-fi",
+        title: "Futuristic City",
+        prompt: "Create this image in a portrait of a young woman standing among pink roses, cinematic atmosphere, pink-white tones, soft natural light, her long curly black hair blowing in the wind partially, wearing elegant light bink silk saree with a subtle sheen.detailed textures, ethereal mood, high-fashion magazine style photography, ultra realistic, 85mm lens, depth of field, 8k.Use the uploaded image for the girl's face -no face distortion,no loss of identity,no face morphing.",
+        tags: ["sci-fi", "city"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/p25.jpg?raw=true" // 👈 leave empty if no image
+      },
+      {
         id: 30,
         category: "sci-fi",
         title: "Futuristic City",
@@ -258,6 +266,7 @@
 
 </body>
 </html>
+
 
 
 
