--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@
     // ✅ You add prompts + uploaded image URLs here
     const prompts = [
       {
+        id: 33,
+        category: "sci-fi",
+        title: "Futuristic City",
+        prompt: "Ultra realistic, high resolution cinematic image of a person walking indoors with purpose. Face with the face from the uploaded image, keeping the facial features exactly the same. He is dressed in a striking red blazer with white buttons, paired with a white shirt that is open at the chest, He wears black fitted trousers with a red leather belt that matches the blazer In his left hand, he carries a sleek black folder, adding a professional touch. The background is a softly blurred elegant architectural interior with soft ambient lighting, creating depth and focus on the subject. The lighting highlights the texture of the fabric, the glossiness the hair, and the calm, determined expression on his face. The overall mood is cinematic, stylish, bold, and powerful",
+        tags: ["sci-fi", "city"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/33.jpg?raw=true" // 👈 leave empty if no image
+      },
+      {
+        id: 34,
+        category: "portrait",
+        title: "Cinematic Portrait",
+        prompt: "Wide-angle GoPro-style shot from a high, symmetrical bird's-eye perspective. [Reference man from the photo] stands in black sunglasses and a sleek black suit, looking casually into the camera while holding his face with his index finger and thumb in a confident gesture.Around him, glamorous supermodels and enthusiastic fans reach out, touching his arms and shoulders, enhancing his magnetic presence. Below the frame, P paparazzi flashes and crowded journalists with cameras create a chaotic yet dramatic atmosphere.The ultra-wide GoPro lens exaggerates erspective, making the scene feel immersive, dynamic, and larger-than-life like a raw, energetic capture from the middle S celebrity madness.",
+        tags: ["cinematic", "portrait"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/34.jpg?raw=true"  // 👈 Replace with your uploaded image link
+      },
+      {
+        id: 35,
+        category: "landscape",
+        title: "Mystical Forest",
+        prompt: "Uitra realistic, 8K resolution cinematic image of a person crouching beside a owerful black horse in a snow-covered mountainous landscape. Face with the face from the uploaded image, keeping the facial features exactly the same. wavy hair, and wears dark sunglasses, a cozy black sweater, grey cargo pants, and black boots. He crouches with one knee bent, holding the reins of the horse with a relaxed yet confident posture. The horse is muscular, with a glossy jet-black coat, flowing mane, and expressive eyes, wearing a simple leather halter. Snow blankets the ground with footprints and scattered rocks visible. In the background, soft-focus snow-covered hills, pine trees, and distant mountain peaks stretch under a Clear blue sky Snowflakes gently fall around them, adding depth and softness to the scene. The lighting is soft and natural, highlighting details like the texture of the snow, fabric folds, and hair strands. The overall mood is calm, adventurous, and majestic, evoking a sense of freedom and harmony with nature.",
+        tags: ["forest", "mystical"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/35.jpg?raw=true"
+      }, 
+      {
         id: 31,
         category: "sci-fi",
         title: "Futuristic City",
@@ -266,6 +290,7 @@
 
 </body>
 </html>
+
 
 
 
