--- a/index.html
+++ b/index.html
@@ -37,6 +37,38 @@
     // ✅ You add prompts + uploaded image URLs here
     const prompts = [
       {
+        id: 36,
+        category: "sci-fi",
+        title: "Futuristic City",
+        prompt: "A Hyper-realistic 8k portrait of a young woman [use same face as uploaded photo] sitting barefoot on the edge of a rustic boat in calm blue waters. Lotuses all over the water, romantically environment. Her head tilted side in a gentle smile. She's dressed in a beautiful sari, with a rich red blouse embroidered with a gold floral pattern. The skirt of the sari is a red, with intricate golden embroidery at the hem. Her hair is pulled up in a relaxed bun, and she wears stunning gold earrings that complement her traditional look. The warm, soft lighting create a serene and elegant atmosphere.",
+        tags: ["sci-fi", "city"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/36.jpg?raw=true" // 👈 leave empty if no image
+      },
+      {
+        id: 37,
+        category: "portrait",
+        title: "Cinematic Portrait",
+        prompt: "Create a retro, vintage- inspired image -grainy yet bright - based on the reference picture. The girl should be draped in a perfect red, Pinterest-style aesthetic retro saree. The vibe must capture the essence of a 90s movie brown -haired baddie, with short wavy curly hair and a small flower tucked visibly into her hair, enhanced by a windy, romantic atmosphere. She stands against a solid wall, where deep shadows and dramatic contrasts add mystery and artistry to the scene, creating a moody yet enchanting cinematic effect. I want same face as I uploaded no alternation 100 percent same.",
+        tags: ["cinematic", "portrait"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/37.jpg?raw=true"  // 👈 Replace with your uploaded image link
+      },
+      {
+        id: 38,
+        category: "landscape",
+        title: "Mystical Forest",
+        prompt: "Hyper-realistic overhead 9:16 close-up of myself with glasses, playfully leaning against an ivy-covered stone wall of an old countryside cottage during golden hour. I'm laughing with my head slightly tilted down, one hand brushing away a dangling vine, The flowering vines are in full bloom with orange, magenta, and lavender hues, softly blurred in the foreground.",
+        tags: ["forest", "mystical"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/38.jpg?raw=true"
+      }, 
+      {
+        id: 39,
+        category: "landscape",
+        title: "Mystical Forest",
+        prompt: "Black and white fine art portrait of a young woman, short wavy slightly messy hair framing her delicate face, smooth fair skin, wearing an oversized white shirt. Pose: sitting with one hand resting gently under her chin, looking at the camera with a calm and thoughtful expression. Studio setting with plain grey backdrop, soft cinematic lighting, minimalistic composition. Ultra realistic, sharp facial details, natural textures, elegant and sophisticated style. Professional photography, 8K quality.",
+        tags: ["forest", "mystical"],
+        imageUrl: "https://github.com/promptsking/promptsking/blob/main/39.jpg?raw=true"
+      }, 
+      {
         id: 33,
         category: "sci-fi",
         title: "Futuristic City",
@@ -290,6 +322,7 @@
 
 </body>
 </html>
+
 
 
 
