--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 🤵 MALE 
             </button>
             <button onclick="filterPrompts('girl')" class="px-12 py-4 text-xl font-bold rounded-xl shadow-lg transition duration-300 transform hover:scale-105 bg-accent-fuchsia hover:bg-fuchsia-500 text-bg-dark" id="filter-girl">
-                🌸 FEMALE 
+                 FEMALE 
             </button>
         </div>
         
@@ -255,3 +255,4 @@
 
 </body>
 </html>
+
