--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         
         <div class="mb-12 flex justify-center space-x-8">
             <button onclick="filterPrompts('men')" class="px-12 py-4 text-xl font-bold rounded-xl shadow-lg transition duration-300 transform hover:scale-105 bg-accent-sky hover:bg-sky-500 text-bg-dark" id="filter-men">
-                🤵 MALE SUBJECTS
+                🤵 MALE
             </button>
             <button onclick="filterPrompts('girl')" class="px-12 py-4 text-xl font-bold rounded-xl shadow-lg transition duration-300 transform hover:scale-105 bg-accent-fuchsia hover:bg-fuchsia-500 text-bg-dark" id="filter-girl">
-                🌸 FEMALE SUBJECTS
+                FEMALE 
             </button>
         </div>
         
@@ -245,3 +245,4 @@
 
 </body>
 </html>
+
